# launcher

./: .gitignore  Cargo.toml  delete.md
authentication/: Cargo.toml
authentication/src/: lib.rs
backend/authentication/: Cargo.toml
backend/authentication/src/: lib.rs
backend/game/: Cargo.toml
backend/game/src/: lib.rs
backend/settings/src/: lib.rs
game/: Cargo.toml  CustomSecurityManager.java  build.rs
game/src/: lib.rs
installation/: Cargo.toml
installation/src/: lib.rs
settings/: Cargo.toml
settings/src/: lib.rs
src/: main.rs
