[package]
name = "proton-launcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
authentication = { path = "backend/authentication" }
game = { path = "backend/game" }
settings = { path = "backend/settings" }

serde_json = "1.0.72"
clap = { version = "3.1.8", features = ["derive"] }
dirs = "4.0.0"
