[package]
name = "game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
settings = { path = "../settings" }

serde_json = "1.0.72"
Boa = "0.13.0"
reqwest = { version = "0.11.6", features = ["blocking"] }
zip = "0.5.13"
fancy-regex = "0.10.0"
